--- a/style.css
+++ b/style.css
@@ -274,17 +274,13 @@ body {
   color: hsl(0, 0%, 100%);
 }
 
-.footer-brand,
-  .footer-list:not(:last-child) { margin-block-end: 0; }
+/**
+ * responsive for larger than 550px screen
+ */
 
-  .footer-top .container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 30px 50px;
-  }
+ @media (min-width: 550px) {
 
-@media (min-width: 550px) {
-.footer-brand,
+  .footer-brand,
   .footer-list:not(:last-child) { margin-block-end: 0; }
 
   .footer-top .container {
@@ -293,14 +289,48 @@ body {
     gap: 30px 50px;
   }
 
-.copyright-link {
-  display: inline-block;
-  text-decoration: underline;
 }
 
-.copyright-link:is(:hover, :focus) { text-decoration: none; }
-}
+
+
+
+
+/**
+ * responsive for larger than 768px screen
+ */
 
 @media (min-width: 768px) {
+  
   .footer-top .container { grid-template-columns: repeat(3, 1fr); }
+
+}
+
+
+
+
+
+/**
+ * responsive for larger than 992px screen
+ */
+
+@media (min-width: 992px) {
+
+  .footer-top .container { grid-template-columns: repeat(4, 1fr); }
+
+  .footer-brand { grid-column: 1 / 5; }
+
+  .footer-brand .text { max-width: 45ch; }
+
+}
+
+/**
+ * responsive for larger than 1200px screen
+ */
+
+@media (min-width: 1200px) {
+
+  .footer-top .container { grid-template-columns: 1fr 0.5fr 0.7fr 0.5fr 1fr; }
+
+  .footer-brand { grid-column: auto; }
+
 }
